# speedtest

./: Cargo.toml  README.md
src/: Untitled Diagram.drawio  main.rs  server.rs
static/: 10mb  index.html
