[package]
name = "speedtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix = "0.13"
actix-codec = "0.5"
actix-files = "0.6"
actix-rt = "2"
actix-web = "4"
actix-web-actors = "4.1"
awc = "3.0.0-beta.21"
env_logger = "0.9"
#futures-util = { version = "0.3.7", default-features = false, features = [
#log = "0.4" , tokio = { version = "1.13.1", features = ["full"] },tokio-stream = "0.1.8"]}
